# algoritmos

./: .gitignore  main.py  pyproject.toml
aula_01/: busca_binaria.py  busca_linear.py  contagem.py  nomes.txt  ordenacao.py  pares_impares.py  simples.py  util.py
aula_02/video_02/: algoritmos.py
aula_02/video_03/: early_termination.py  estruturas_adequadas.py  pre_computacao.py  pre_computacao_exemplo.py  recursivo_cache.py
aula_03/: arrays_linked.py  arvore.py  arvore_bigtree.py  estruturas_dados.py  grafo_lista.py  grafo_matriz.py  grafos.py  hashtable.py  hashtable_alfabeto.py  unionfind.py
aula_04/: ex01_sol01.py  ex01_sol02.py  ex01_sol03.py  ex01_test.py  ex02_sol01.py  ex02_sol02.py  ex02_test.py  ex03_sol01.py  ex04_sol01.py  ex05_sol01.py  ex05_sol02.py
resolucoes/: lc1-fast.py  lc1-slow.py
