[project]
name = "cursoalgoritmos-fontes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bigtree[image]>=0.25.4",
]

[dependency-groups]
dev = [
    "pylsp-mypy>=0.7.0",
    "pylsp-rope>=0.1.17",
    "pytest>=8.3.5",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server[all]>=1.12.2",
    "ruff>=0.11.4",
    "ruff-lsp>=0.0.62",
]

